kubernetes/service_api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: real-devops-challenge
  labels:
    app: api
    tier: backend
spec:
  selector:
    app: api
    tier: backend
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
