kubernetes/service_mongo.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nosqldb
  namespace: real-devops-challenge
  labels:
    app: api
    tier: nosqldb
spec:
  selector:
    app: api
    tier: nosqldb
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
